--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="2.5.0" targetFramework="net46" />
   <package id="AngularJS.Cookies" version="1.5.8" targetFramework="net461" />
   <package id="AngularJS.Core" version="1.5.8" targetFramework="net461" />
   <package id="AngularJS.Messages" version="1.5.8" targetFramework="net461" />
@@ -9,6 +10,7 @@
   <package id="angular-loading-bar.TypeScript.DefinitelyTyped" version="0.6.6" targetFramework="net461" />
   <package id="angular-local-storage" version="0.5.1" targetFramework="net461" />
   <package id="angular-local-storage.TypeScript.DefinitelyTyped" version="2.7.4" targetFramework="net461" />
+  <package id="angular-ui-bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="Chutzpah" version="4.3.5" targetFramework="net46" />
