--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
@@ -6,12 +6,12 @@
   <package id="AngularJS.Messages" version="1.5.8" targetFramework="net461" />
   <package id="AngularJS.Route" version="1.5.8" targetFramework="net461" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.5" targetFramework="net461" />
-  <package id="AngularJS-Toaster" version="2.0.0" targetFramework="net46" />
-  <package id="angularjs-toaster.TypeScript.DefinitelyTyped" version="0.6.5" targetFramework="net46" />
   <package id="angular-loading-bar" version="0.9.0" targetFramework="net461" />
   <package id="angular-loading-bar.TypeScript.DefinitelyTyped" version="0.6.6" targetFramework="net461" />
   <package id="angular-local-storage" version="0.5.1" targetFramework="net461" />
   <package id="angular-local-storage.TypeScript.DefinitelyTyped" version="2.7.4" targetFramework="net461" />
+  <package id="angular-toastr" version="2.1.1" targetFramework="net46" />
+  <package id="angular-toastr.TypeScript.DefinitelyTyped" version="1.5.3" targetFramework="net46" />
   <package id="angular-ui-bootstrap.TypeScript.DefinitelyTyped" version="0.9.8" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
