--- a/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
+++ b/SourceCode/1.UI/CodingChallange.MVC.Angular.UI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Angular.UI.Bootstrap" version="2.5.0" targetFramework="net46" />
+  <package id="AngularJS.Animate" version="1.5.8" targetFramework="net46" />
   <package id="AngularJS.Cookies" version="1.5.8" targetFramework="net461" />
   <package id="AngularJS.Core" version="1.5.8" targetFramework="net461" />
   <package id="AngularJS.Messages" version="1.5.8" targetFramework="net461" />
